[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ref_toolkit"
version = "1.0.0"
description = "Helios: toolkit for the Resonant Entropy Field simulations and analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.25",
    "scipy>=1.11", 
    "matplotlib>=3.8",
    "pymc>=5.0",
    "click>=8.1"
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ref-fpe = "ref_toolkit.cli:main"
ref-sim = "ref_toolkit.sim.neuromorphic_diagram:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"